fixed p tag styles not accepting textAlign

--- a/client/components/hero/Hero.module.css
+++ b/client/components/hero/Hero.module.css
@@ -13,7 +13,6 @@
     line-height: 1.1em;
     font-weight: 400;
     color: #7f7f7f;
-    margin-left: 30px;
     text-align: center;
 }
 
